Fixed routing to mood-chosen page

--- a/src/app/user-profile-dashboard/user-profile-dashboard.component.html
+++ b/src/app/user-profile-dashboard/user-profile-dashboard.component.html
@@ -23,7 +23,9 @@
     </div>
         <!-- Page Content Holder -->
         <div id="content">
-            
+            <div class="col-md-10">
+            <!-- <app-pie-chart></app-pie-chart> -->
+            </div>
         </div>
 
     <!-- jQuery CDN - Slim version (=without AJAX) -->
