--- a/src/app/journal-free-write/journal-free-write.component.css
+++ b/src/app/journal-free-write/journal-free-write.component.css
@@ -69,8 +69,8 @@ textarea:hover {
     border: 2px solid #7CA5AF;
     background-color: whitesmoke;
     color: #7CA5AF;
-    height: 75%;
-    width: 90%;
+    height: 100% !important;
+    width: 10%;
     font-size: 16px;
     cursor: pointer;
     border-radius: 5px;
