Fixed mood tracker and added Pie Chart!

--- a/src/app/pie-chart/pie-chart.component.html
+++ b/src/app/pie-chart/pie-chart.component.html
@@ -1,1 +1,11 @@
-<canvas id="pieChart"></canvas> 
+<div>
+    <canvas
+        baseChart
+        [chartType]="'pie'"
+        [datasets]="pieChartData"
+        [labels]="pieChartLabels"
+        [legend]="true"
+        [colors]="pieChartColor"
+        (chartClick)="onChartClick($event)">
+    </canvas>
+  </div>
