--- a/src/app/user-profile-dashboard/user-profile-dashboard.component.html
+++ b/src/app/user-profile-dashboard/user-profile-dashboard.component.html
@@ -24,7 +24,7 @@
         <!-- Page Content Holder -->
         <div id="content">
             <div class="col-md-10">
-            <!-- <app-pie-chart></app-pie-chart> -->
+            <app-pie-chart></app-pie-chart>
             </div>
         </div>
 
