coffee select fe partial

--- a/src/app/coffee-chat-navbar/coffee-chat-navbar.component.html
+++ b/src/app/coffee-chat-navbar/coffee-chat-navbar.component.html
@@ -1,6 +1,6 @@
 <!-- Page Content Holder -->
 
-    <nav class="navbar navbar-expand-lg" style="background-color: #e4955e;">
+    <nav class="navbar navbar-expand-lg" style="background-color: #f2b57c;">
         <div class="container-fluid">
             <a class="navbar-brand fancy-font text-grey" style="font-size: 40px;">Coffee Chat</a>
             <a class="reg-font text-grey" style="font-size: 30">>> {{currentPage}}</a>
