--- a/src/app/coffee-chat-select-friends/coffee-chat-select-friends.component.css
+++ b/src/app/coffee-chat-select-friends/coffee-chat-select-friends.component.css
@@ -9,20 +9,13 @@
     min-height: 100vh;
     transition: all 0.3s;
 }
-
-
-
-
-
-  
-
-
   
   p, h1, h2, h3, h4, h5, h6, ul {
     margin: 0; }
   
   img {
-    max-width: 100%; }
+    max-width: 100%;
+    max-height: 500px; }
   
   ul {
     padding-left: 0;
@@ -40,7 +33,7 @@
     outline: none; }
   
   .wrapper {
-    min-height: 100vh;
+    min-height: 75vh;
     display: flex;
     align-items: center;
     font-family: 'Montserrat'; }
@@ -52,7 +45,7 @@
   
   .image-holder {
     width: 50%;
-    max-height: 550px; }
+    max-height: 100%; }
   
   .option {
     color: #999;
@@ -64,16 +57,16 @@
         background: ivory;
         background-size: 100%;
         padding-top: 63px;
-        padding-left: 49px;
-        padding-right: 50px; 
+        padding-left: 30px;
+        padding-right: 30px; 
         color: grey;
     }
   
   h3 {
-    font-size: 35px;
+    font-size: 28px;
     text-align: center;
     margin-bottom: 38px;
-    color: #f78582; }
+    color: #f2b57c; }
   
   .form-wrapper {
     color: black;
@@ -81,7 +74,7 @@
     align-items: center;
     margin-bottom: 16px; }
     .form-wrapper label {
-      width: 32.92%; }
+      width: 32%; }
       .form-wrapper label.label-input {
         transform: translateY(5px); }
       .form-wrapper label.label-comment {
@@ -100,11 +93,11 @@
   
   .form-control {
     width: 67.08%;
-    height: 25px;
+    height: 15%;
     display: block;
     font-size: 13px;
     border: none;
-    border-bottom: 1px solid #6967a1;
+    border-bottom: 1px solid rgb(78, 78, 78);
     background: none;
     color: grey;
     padding: 0; }
@@ -116,14 +109,14 @@
     -moz-appearance: none;
     -webkit-appearance: none;
     cursor: pointer;
-    width: 30px;
-    border: none;
+    width: 100%;
+    border: 2px;
     font-size: 15px;
     transform: translateY(-1px); }
   
   button {
     height: 42px;
-    width: 191px;
+    width: 200px;
     display: inline-flex;
     border: none;
     font-size: 15px;
@@ -133,13 +126,13 @@
     cursor: pointer;
     transition: all 0.5s ease;
     background-color: ivory;
-    color: #7CA5AF;
-    border: 2px solid #7CA5AF;
+    color: #f2b57c;
+    border: 2px solid #f2b57c;
     border-radius: 5px;
     font-family: 'Montserrat';
   }
     button:hover {
-      background-color: #7CA5AF;
+      background-color: #f2b57c;
       color: #fff;
      }
   
@@ -153,6 +146,7 @@
   
     .image-holder {
       max-height: 490px; } }
+      
   @media (max-width: 767px) {
     .inner {
       display: block; }
@@ -170,3 +164,56 @@
       background: none; } }
   
 
+
+
+div.searchable {
+    width: 300px;
+    float: left;
+    margin: 0 15px;
+}
+
+.searchable input {
+    width: 100%;
+    height: 50px;
+    font-size: 18px;
+    padding: 10px;
+    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+    -moz-box-sizing: border-box; /* Firefox, other Gecko */
+    box-sizing: border-box; /* Opera/IE 8+ */
+    display: block;
+    font-weight: 400;
+    line-height: 1.6;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: .25rem;
+    transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+    background: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3E%3Cpath fill='%23343a40' d='M2 0L0 2h4zm0 5L0 3h4z'/%3E%3C/svg%3E") no-repeat right .75rem center/8px 10px;
+}
+
+.searchable ul {
+    display: none;
+    list-style-type: none;
+    background-color: #fff;
+    border-radius: 0 0 5px 5px;
+    border: 1px solid #add8e6;
+    border-top: none;
+    max-height: 180px;
+    margin: 0;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    padding: 0;
+}
+
+.searchable ul li {
+    padding: 7px 9px;
+    border-bottom: 1px solid #e1e1e1;
+    cursor: pointer;
+    color: #6e6e6e;
+}
+
+.searchable ul li.selected {
+    background-color: #e8e8e8;
+    color: #333;
+}
