--- a/src/app/coffee-chat-select-friends/coffee-chat-select-friends.component.html
+++ b/src/app/coffee-chat-select-friends/coffee-chat-select-friends.component.html
@@ -10,6 +10,10 @@
     <!-- Font Awesome JS -->
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js" integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ" crossorigin="anonymous"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js" integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY" crossorigin="anonymous"></script>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.12.6/js/standalone/selectize.min.js" integrity="sha256-+C0A5Ilqmu4QcSPxrlGpaZxJ04VjsRjKu+G82kl5UJk=" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.12.6/css/selectize.bootstrap3.min.css" integrity="sha256-ze/OEYGcFbPRmvCnrSeKbRTtjG4vGLHXgOqsyLFTRjg=" crossorigin="anonymous" />
 </head>
 <div>
     <app-navbar style="z-index: 9999;"></app-navbar>
@@ -18,19 +22,29 @@
     <app-coffee-chat-navbar style="z-index: 1;"></app-coffee-chat-navbar>
 </div>
 <body>
+<!--JS USED-->
+<script>
+    $(document).ready(function () {
+      $('select').selectize({
+          sortField: 'text'
+      });
+  });
+</script>
+
+
         <!-- Page Content Holder -->
-        <div class="" id="content">
+        <div class="coffee-chat" id="content">
             <div class="wrapper">
                 <div class="inner">
                 <form [formGroup]="createMeeting" (ngSubmit)="onSubmit()">
                     <h3>Start Connecting</h3>
                     <div class="form-wrapper">
                         <label for="people">People: </label>
-                        <select multiple formControlName="people">
-                            <option *ngFor="let person of peopleList"  [ngValue]="person">
-                                {{person.firstName}} {{person.lastName}}
-                            </option>
-                        </select>
+                            <select multiple placeholder="Select Friends">
+                                <option *ngFor="let person of peopleList"  [ngValue]="person">
+                                    {{person.firstName}} {{person.lastName}}
+                                </option>
+                            </select>
                     </div>
                     <div class="form-wrapper">
                         <label for="start">Date:</label>
@@ -49,17 +63,17 @@
                                 <div *ngIf="f.time.errors.required">Time is required</div>
                             </div>
                     </div>
-                    <div class="form-group">
+                    <div class="form-wrapper justify-content-center">
                         <button [disabled]="loading" class="button">
                             <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1" routerLink="/coffee-chat-profiles"></span>
                             Create Meeting
                         </button>
                     </div>
                 </form>
-            </div>
             <div class="image-holder">
-                <img src="'..src/assets/images/coffee select friends.jpg'" alt="" height="400px" width="200px">
+                <img src="../assets/images/coffee select friends.jpg" alt="">
             </div>
+        </div>
     </div>   
         </div>
         
