deleted drafts component

--- a/src/app/journal-navbar/journal-navbar.component.html
+++ b/src/app/journal-navbar/journal-navbar.component.html
@@ -9,10 +9,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link reg-font text-grey hoverable" href="journal-drafts">Drafts</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link reg-font text-grey hoverable" href="journal-published">Published</a>
+                        <a class="nav-link reg-font text-grey hoverable" href="journal-published">Previous Entries</a>
                     </li>
                     <li class="dropdown nav-item">
                         <a class="nav-link dropdown-toggle reg-font text-grey hoverable" href="#new-entry-submenu" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
