--- a/src/app/coffee-chat-select-friends/coffee-chat-select-friends.component.html
+++ b/src/app/coffee-chat-select-friends/coffee-chat-select-friends.component.html
@@ -3,19 +3,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <!-- include the js -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.1.0/chosen.jquery.min.js"></script>
-
-<!-- include the css and sprite -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.1.0/chosen.min.css">
-<link rel="image_src" href="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.1.0/chosen-sprite.png">
-
-<!-- include angular -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular.min.js"></script>
-
-<!-- include angular-chosen -->
-<script src="path/to/angular-chosen.js"></script>
     <!-- Bootstrap CSS CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
     <!-- Our Custom CSS -->
@@ -24,6 +11,7 @@
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js" integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ" crossorigin="anonymous"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js" integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY" crossorigin="anonymous"></script>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/d3js/5.15.1/d3.min.js"></script>
 </head>
 <div>
     <app-navbar style="z-index: 9999;"></app-navbar>
@@ -33,9 +21,10 @@
 </div>
 <body>
 <!--JS USED-->
-<script>
-    $(".chosen-select").chosen({
-  no_results_text: "Oops, nothing found!"
+
+<script type="text/javascript">
+$(function() {
+    $(".chosen-select").chosen();
 })
 </script>
 
@@ -48,8 +37,7 @@
                     <h3>Start Connecting</h3>
                     <div class="form-wrapper">
                         <label for="people">People: </label>
-                            <select data-placeholder="Select Friends" multiple class="chosen-select" name="test">
-                                <option value=""></option>
+                            <select multiple data-placeholder="Select Friends" class="chosen-select">
                                 <option *ngFor="let person of peopleList"  [ngValue]="person">
                                     {{person.firstName}} {{person.lastName}}
                                 </option>
