--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,9 +3,9 @@
     <div class="container">
         <div class="text-center">
             <img src="assets/images/logo transparent.png" alt="" width="140" height="100">
-            <p class="fancy-font" style="color: #A4D4F0; font-size: 68px">Meaningful Minutes</p>
+            <p class="fancy-font" style="color: #59b6ec; font-size: 68px; text-shadow: 2px 2px grey;">Meaningful Minutes</p>
             <div>
-                <hr class="divide"/> 
+                <hr class="divide2"/> 
             </div>
             <p class="type-font" style="font-size: 20px; color: #fff">Connect and Reflect</p>
         </div>
