--- a/src/app/nav-buttons-home/nav-buttons-home.component.html
+++ b/src/app/nav-buttons-home/nav-buttons-home.component.html
@@ -1,23 +1,24 @@
 <div class="container">
     <div class = "row">
         <div class="col-md-4">
+            <a class="img center-block border-journal" href="journal">
+                <div class="img__overlay-journal type-font">Journal</div>
+                <img src="assets/images/journalbutton.jpeg"/>
+            </a>
+        </div>
+        <div class="col-md-4">
             <a class="img center-block border-coffee" href="coffee-chat">
-                <div class="img__overlay type-font">Coffee Chat</div>
+                <div class="img__overlay-coffee type-font">Coffee Chat</div>
                 <img src="assets/images/coffeebutton.jpeg"/>
             </a>
         </div>
         <div class="col-md-4">
             <a class="img center-block border-mood" href="mood-tracker">
-                <div class="img__overlay type-font">Mood Tracker</div>
+                <div class="img__overlay-mood type-font">Mood Tracker</div>
                 <img src="assets/images/moodbutton.jpeg"/>
             </a>
         </div>
-        <div class="col-md-4">
-            <a class="img center-block border-journal" href="journal">
-                <div class="img__overlay type-font">Journal</div>
-                <img src="assets/images/journalbutton.jpeg"/>
-            </a>
-        </div>
+
         
     </div>
 </div>
