--- a/src/styles.css
+++ b/src/styles.css
@@ -191,10 +191,10 @@ hr.blur {
 hr.divide2 {
   border: 0;
   height: 1px;
-  padding: 0;
-  margin: 0;
+  width: 600px;
+  justify-content: center;
   background: #333;
-  background-image: linear-gradient(to right, #9bc6d1, #6d6c6c, #9bc6d1);
+  background-image: linear-gradient(to right, rgb(194, 193, 193), black, rgb(194, 193, 193));
 }
 
 
