--- a/src/app/journal-free-edit/journal-free-edit.component.html
+++ b/src/app/journal-free-edit/journal-free-edit.component.html
@@ -10,7 +10,7 @@
     <!-- Bootstrap CSS CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
     <!-- Our Custom CSS -->
-    <link rel="stylesheet" href="journal-free-write.component.css">
+    <link rel="stylesheet" href="journal-free-edit.component.css">
 
     <!-- Font Awesome JS -->
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js" integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ" crossorigin="anonymous"></script>
@@ -40,7 +40,7 @@
 
                         <div class="text-center reg-font" style="color: white; font-weight: 900; font-size: 20px; text-shadow: 2px 2px grey; padding: 2%;">{{currentDate}}</div>
                         <div class="form-group" style="align-content: center;">
-                            <textarea rows="20" formControlName="textEntry" class="notes" placeholder="Begin entry here..."></textarea>
+                            <textarea rows="20" formControlName="textEntry" class="notes"></textarea>
                         </div>
                     </div>
                     <div class="col-2"></div>                    
