--- a/src/app/journal-prompt-edit/journal-prompt-edit.component.html
+++ b/src/app/journal-prompt-edit/journal-prompt-edit.component.html
@@ -10,51 +10,57 @@
     <!-- Bootstrap CSS CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
     <!-- Our Custom CSS -->
-    <link rel="stylesheet" href="journal-free-write.component.css">
+    <link rel="stylesheet" href="journal-prompt-edit.component.css">
 
     <!-- Font Awesome JS -->
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js" integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ" crossorigin="anonymous"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js" integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY" crossorigin="anonymous"></script>
 
 </head>
-<body ng-app='myapp'>
+<body>
+
     <div>
         <app-navbar style="z-index: 9999;"></app-navbar>
     </div>
     <div class="sticky-top">
         <app-journal-navbar style="z-index: 1;"></app-journal-navbar>
     </div>
-        <!-- Page Content Holder -->
-        <div class="journal" id="content">
 
+    <div class="journal" id="content">
             <!--Actual Content-->
         <form [formGroup]="journalForm" (ngSubmit)="onSubmit()">
             <div class="container">
                 <div class="row">
                     <div class="col-2"></div>
                     <div class="col-8">
-
+                        <textarea rows="2" class="reg-font text-center" style="margin-top: 50px; font-size: 25px;" readonly>{{currentJournal.title}}</textarea>
+                        <div class="text-center reg-font" style="color: white; font-weight: 900; font-size: 20px; text-shadow: 2px 2px grey; text-align: center; padding: 2%">{{currentDate}}</div>
                         <div class="form-group" style="align-content: center;">
-                        <textarea rows="1" class="title text-center" formControlName="title" style="margin-top: 50px;" placeholder="Title"></textarea>
-                    </div>
-
-                        <div class="text-center reg-font" style="color: white; font-weight: 900; font-size: 20px; text-shadow: 2px 2px grey; padding: 2%;">{{currentDate}}</div>
-                        <div class="form-group" style="align-content: center;">
-                            <textarea rows="20" formControlName="textEntry" class="notes" placeholder="Begin entry here..."></textarea>
+                            <textarea rows="20" class="notes" formControlName="textEntry"></textarea>
                         </div>
                     </div>
-                    <div class="col-2"></div>                    
+                    <div class="col-2"></div>
                 </div>
-                <div class="row justify-content-center">
+                <div class="row">
+                    <div class="col-4"></div>
+                    <div class="col-2">
                         <button [disabled]="loading" class="buttons">
                             <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
-                            Submit
+                            Save
                         </button>
+                    </div>  
+                    <div class="col-2">
+                        <button [disabled]="loading" class="buttons">
+                            <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+                            Publish
+                        </button>
+                    </div>  
+                    <div class="col-4"></div>
                 </div>
-            </div>
-        </form>  
-        </div>   
-            
+            </div>  
+        </form>
+    </div>
+        
     <!-- jQuery CDN - Slim version (=without AJAX) -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <!-- Popper.JS -->
@@ -62,4 +68,5 @@
     <!-- Bootstrap JS -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
 </body>
+
 </html>
