Added deletion of journals function

--- a/src/app/journal-published/journal-published.component.html
+++ b/src/app/journal-published/journal-published.component.html
@@ -40,7 +40,7 @@
                             <div class="icons">
                                 <button class="btn-2" title="Edit" (click) = "getValue(entry)"><span class="fa fa-pencil fa-sm" style="color: grey" ></span></button>
                                 <button class="btn-2" title="View" data-toggle="modal" data-target="#entry"><span class="fa fa-eye fa-sm"  style="color: grey" ></span></button>
-                                <button class="btn-2" title="Delete"><span class="fa fa-trash-o"  style="color: grey"></span></button>
+                                <button class="btn-2" title="Delete" (click) = "removeJournal(entry)"><span class="fa fa-trash-o"  style="color: grey"></span></button>
                             </div>
                         </li>
                       </ul>
