modals fixed and select friends check-box format setup

--- a/src/app/coffee-chat-random-friends/coffee-chat-random-friends.component.html
+++ b/src/app/coffee-chat-random-friends/coffee-chat-random-friends.component.html
@@ -35,7 +35,7 @@
                 Start Connecting (Randomly Generate Friends)
             </div>
             <alert></alert>
-            <form [formGroup]="createRandomMeeting" (ngSubmit)="onSubmit()">
+            <form [formGroup]="createMeeting" (ngSubmit)="onSubmit()">
                 <div class="form-group">
                     <label>Number of People:</label>
                     <select formControlName="numPeople"> 
