--- a/src/app/coffee-chat-select-friends/coffee-chat-select-friends.component.html
+++ b/src/app/coffee-chat-select-friends/coffee-chat-select-friends.component.html
@@ -10,29 +10,33 @@
     <!-- Font Awesome JS -->
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js" integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ" crossorigin="anonymous"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js" integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY" crossorigin="anonymous"></script>
+
 </head>
-<div>
+<div> 
     <app-navbar style="z-index: 9999;"></app-navbar>
 </div>
 <div class="sticky-top">
     <app-coffee-chat-navbar style="z-index: 1;"></app-coffee-chat-navbar>
 </div>
 <body>
+<!--JS USED-->
+​
+​
         <!-- Page Content Holder -->
-        <div id="content">
-            <div class="container">
-                <div class="row justify-content-center">
-                    Start Connecting (Select Friends)
-                </div>
-                <alert></alert>
+        <div class="coffee-chat" id="content">
+            <div class="wrapper">
+                <div class="inner">
+                    <h3>Start Connecting</h3>
+                    <alert></alert>
+                    
                 <form [formGroup]="createMeeting" (ngSubmit)="onSubmit()">
-                    <div class="form-group">
-                        <label for="people">People: </label>
-                        <select multiple formControlName="people">
-                            <option *ngFor="let person of peopleList"  [ngValue]="person">
-                                {{person.firstName}} {{person.lastName}}
-                            </option>
-                        </select>
+                    <div class="user-select">
+                        <label for="people">People:</label>
+                        <div *ngFor="let person of peopleList"  [ngValue]="person">
+                            <input type="checkbox" (change)="userSelect(person.username)" [disabled]="maxCapacity && !this.selectedPeople.includes(person.username)">
+                            <label>                          {{person.firstName}} {{person.lastName}}
+                            </label>
+                        </div>
                     </div>
                     <div class="form-group">
                         <label for="start">Date:</label>
@@ -45,13 +49,11 @@
                                 </div>
                     </div>
                     <div class="form-group">
-                        <div class="md-form md-outline">
                             <label for="default-picker">Time:</label>
                             <input type="time" id="default-picker" placeholder="Select time" formControlName="time" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.time.errors }">
                             <div *ngIf="submitted && f.time.errors" class="invalid-feedback">
                                 <div *ngIf="f.time.errors.required">Time is required</div>
                             </div>
-                          </div>
                     </div>
                     <div class="form-group">
                         <button [disabled]="loading" class="btn btn-primary">
@@ -61,8 +63,13 @@
                         </button>
                     </div>
                 </form>
-            </div>    
+            <div class="image-holder">
+                <!-- <img src="../assets/images/coffee select friends.jpg" alt=""> -->
+            </div>
         </div>
+    </div>   
+        </div>
+        
     <!-- jQuery CDN - Slim version (=without AJAX) -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <!-- Popper.JS -->
