--- a/src/app/coffee-chat-upcoming-meetings/coffee-chat-upcoming-meetings.component.css
+++ b/src/app/coffee-chat-upcoming-meetings/coffee-chat-upcoming-meetings.component.css
@@ -11,7 +11,7 @@ p {
     font-size: 1.1em;
     font-weight: 300;
     line-height: 1.7em;
-    color: #999;
+    color: #8b593b;
 }
 
 .h2{
@@ -96,15 +96,16 @@ p {
 
 .list-group{
   background-color: ivory;
-  border-color: grey !important;
+  border-color: #8b593b !important;
 }
 .list-group-item{
-  outline: grey !important;
+  outline: #8b593b !important;
 }
 
 .heading{
-  border-color: grey;
-  background-color: #D8E4E7;
+  border-color: #8b593b;
+  background-color: #8b593b;
+  
 }
 
 .btn-2{
@@ -169,7 +170,7 @@ display: none;
 
 .modal-header {
   padding: 20px 40px;
-  background: #7CA5AF;
+  background: #8b593b;
   color: #ffffff;
 }
 
@@ -208,9 +209,9 @@ display: none;
 }
 
 .modal-button{
-    border: 2px solid #7CA5AF;
+    border: 2px solid #30190b;
     background-color: whitesmoke;
-    color: #7CA5AF;
+    color: #8b593b;
     padding: 10px 24px;
     font-size: 16px;
     cursor: pointer;
@@ -218,7 +219,7 @@ display: none;
 }
 
 .modal-button:hover{
-    background-color:#7CA5AF;
+    background-color:#8b593b;
     color: white; 
 }
 
